feat(dto-generation): add the generation of dto classes

--- a/src/main/resources/spec-api.yml
+++ b/src/main/resources/spec-api.yml
@@ -52,6 +52,6 @@ components:
     GreetingDTO:
       type: object
       properties:
-        greetine:
+        greeting:
           description: The server generated greeting
           type: string
