--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,17 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
+    <!--Swagger-->
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>1.5.23</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openapitools</groupId>
+      <artifactId>jackson-databind-nullable</artifactId>
+      <version>0.2.0</version>
+    </dependency>
     <!--DevTools-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -54,6 +65,53 @@
 
   <build>
     <plugins>
+      <!--OpenAPI Plugin-->
+      <plugin>
+        <groupId>org.openapitools</groupId>
+        <artifactId>openapi-generator-maven-plugin</artifactId>
+        <version>4.1.1</version>
+        <executions>
+          <execution>
+            <id>generate-dto-objects</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <inputSpec>${project.basedir}/src/main/resources/spec-api.yml</inputSpec>
+              <generatorName>spring</generatorName>
+              <configOptions>
+                <sourceFolder>src/gen/java/main</sourceFolder>
+                <java8>true</java8>
+              </configOptions>
+              <modelPackage>uk.gov.dwp.roadshow.generated.rest.model</modelPackage>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!--OpenAPI Plugin-->
+      <plugin>
+        <groupId>org.openapitools</groupId>
+        <artifactId>openapi-generator-maven-plugin</artifactId>
+        <version>4.1.1</version>
+        <executions>
+          <execution>
+            <id>generate-dto-objects</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <inputSpec>${project.basedir}/src/main/resources/spec-api.yml</inputSpec>
+              <generatorName>spring</generatorName>
+              <configOptions>
+                <sourceFolder>src/gen/java/main</sourceFolder>
+                <java8>true</java8>
+              </configOptions>
+              <modelPackage>uk.gov.dwp.roadshow.generated.rest.model</modelPackage>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!--SpringBoot Plugin-->
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
